feat: Add Space Optimized Top Down DP Solution

--- a/1. Fibonacci Series/1. Fibonacci Series (Easy).ipynb
+++ b/1. Fibonacci Series/1. Fibonacci Series (Easy).ipynb
@@ -84,8 +84,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Optimized Bottom Up - O(N) runtime, O(1) space"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateFibonacci(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "\n",
+    "    n1, n2, temp = 0, 1, 0\n",
+    "    for i in range(2, n + 1):\n",
+    "        temp = n1 + n2\n",
+    "        n1 = n2\n",
+    "        n2 = temp\n",
+    "\n",
+    "    return n2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +120,7 @@
        "5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
