--- a/1. Fibonacci Series/4. Minimum jumps to reach the end.ipynb
+++ b/1. Fibonacci Series/4. Minimum jumps to reach the end.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top-down with Memoization - O(N) runtime, O(N) space"
+    "# Top-down with Memoization - O(N^2) runtime, O(N) space"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bottom-up with Tabulation - O(N) runtime, O(N) space"
+    "# Bottom-up with Tabulation - O(N^2) runtime, O(N) space"
    ]
   },
   {
