--- a/1. Fibonacci Series/6. House thief.ipynb
+++ b/1. Fibonacci Series/6. House thief.ipynb
@@ -109,8 +109,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Optimized Bottom-up DP - O(N) runtime, O(1) space"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_max_steal(wealth):\n",
+    "    n = len(wealth)\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    n1 = 0    # if there are no houses, the thief can't steal anything\n",
+    "    n2 = wealth[0]    # only one house, so the thief have to steal from it\n",
+    "\n",
+    "    # please note that dp[] has one extra element to handle zero house\n",
+    "    for i in range(1, n):\n",
+    "        n1, n2 = n2, max(wealth[i] + n1, n2)\n",
+    "\n",
+    "    return n2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +147,7 @@
        "15"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
