--- a/4. Palindromic Subsequence/2. Longest Palindromic Substring.ipynb
+++ b/4. Palindromic Subsequence/2. Longest Palindromic Substring.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +147,70 @@
        "3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "find_LPS_length(\"abdbca\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Optimized DP - O(N ^ 2) runtime, O(1) space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    \n",
+    "    def getPalindromeLength(self, s, left, right):\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "        return right - left - 1 \n",
+    "    \n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        start = end = 0\n",
+    "        \n",
+    "        for ctr in range(len(s)):\n",
+    "            len1 = self.getPalindromeLength(s, ctr, ctr)\n",
+    "            len2 = self.getPalindromeLength(s, ctr, ctr + 1)\n",
+    "            length = max(len1, len2)\n",
+    "            \n",
+    "            if length > end - start:\n",
+    "                start = ctr - (length - 1) // 2\n",
+    "                end = ctr + length // 2\n",
+    "                \n",
+    "        return s[start:end + 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cddc'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Instance = Solution()\n",
+    "Instance.longestPalindrome('abcddcd')"
    ]
   }
  ],
