fix: Fix problem statement

--- a/6. Miscllaneous DP Problems/1. Largest Sum Subarray.ipynb
+++ b/6. Miscllaneous DP Problems/1. Largest Sum Subarray.ipynb
@@ -11,7 +11,7 @@
     "Example: <br/>\n",
     "Input: [-4, 2, -5, 1, 2, 3, 6, -5, 1] <br/>\n",
     "Output: 12 <br/>\n",
-    "Explanantion: In the input array, the largest sum subarray starts at index 3 and ends at 6"
+    "Explanation: In the input array, the largest sum subarray starts at index 3 and ends at 6"
    ]
   },
   {
