--- a/3. Unbounded Knapsack/3. Coin Change.ipynb
+++ b/3. Unbounded Knapsack/3. Coin Change.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,17 +127,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Optimized Bottom Up DP - O(N * C) runtime, O(C) space"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_change(coins, amount):\n",
+    "\n",
+    "    if amount <= 0:\n",
+    "        return 0\n",
+    "\n",
+    "    if coins is None or len(coins) == 0:\n",
+    "        return -1\n",
+    "\n",
+    "    dp = [float('inf') for _ in range(amount + 1)]\n",
+    "    dp[0] = 0\n",
+    "\n",
+    "    for s in range(1, amount + 1):\n",
+    "        for c in coins:\n",
+    "            if s == c:\n",
+    "                dp[s] = 1\n",
+    "            elif c <= s:\n",
+    "                dp[s] = min(dp[s],  1 + dp[s - c])\n",
+    "\n",
+    "    return -1 if dp[amount] == float('inf') else dp[amount]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
